--- a/www/routes/views/create_content.pug
+++ b/www/routes/views/create_content.pug
@@ -57,4 +57,4 @@ html
 
             //- Content Container
             div.container.col-md-8.col-10.__main_content_container
-                p hello
+                p Create Content
