--- a/www/routes/views/schema.pug
+++ b/www/routes/views/schema.pug
@@ -18,26 +18,38 @@ html
                 div.collapse.navbar-collapse#cmsNav
                     ul.navbar-nav
                         li.nav-item
-                            a.nav-link(href="/dashboard") Dashboard
-                        li.nav-item
-                            a.nav-link(href="#") Link
-                        li.nav-item
-                            a.nav-link(href="#") Link
-                        li.nav-item
-                            a.nav-link(href="#") Link
-                        li.nav-item.dropdown
-                            a.nav-link.dropdown-toggle.active(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin
-                            ul.dropdown-menu
+                            a.nav-link.active(aria-current="page" href="/") Dashboard
+                        li.nav-item.dropdown 
+                            a.nav-link.dropdown-toggle(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Content 
+                            ul.dropdown-menu 
+                                li 
+                                    a.dropdown-item(href="/view-content") View Content 
                                 li
-                                    a.dropdown-item.active(href="/admin/categories" aria-current="page" style="cursor: pointer;") Categories
-                                li
-                                    a.dropdown-item(href="/admin/create-category" style="cursor: pointer;") Create Category
-                                li
-                                    a.dropdown-item(href="/admin/api-keys" style="cursor: pointer;") API Keys
-                                li
+                                    a.dropdown-item(href="/create-content") Create Content 
+                                li 
                                     hr.dropdown-divider
-                                li
-                                    a.dropdown-item(href="/admin/users" style="cursor: pointer;") Users
+                                li 
+                                    a.dropdown-item(href="/view-projects") View Projects 
+                                li 
+                                    a.dropdown-item(href="/create-project") Create Projects
+                        li.nav-item
+                            a.nav-link(href="/manage-cdn") CDN
+                        li.nav-item
+                            a.nav-link(href="#") Profile
+                        if admin == true
+                            li.nav-item.dropdown
+                                a.nav-link.dropdown-toggle(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin
+                                ul.dropdown-menu
+                                    li
+                                        a.dropdown-item(href="/admin/categories") Categories
+                                    li
+                                        a.dropdown-item(href="/admin/create-category") Create Category
+                                    li
+                                        a.dropdown-item(href="/admin/api-keys") API Keys
+                                    li
+                                        hr.dropdown-divider
+                                    li
+                                    a.dropdown-item(href="/admin/users") Users
                         li.nav-item
                             a.nav-link.text-danger.active(href="/login/logout") Log Out
 
@@ -53,21 +65,32 @@ html
                         div.card
                             div.row.g-0.justify-content-center
                                 div.col-10.__admin_table_container
-                                    if tables.length > 2
+                                    if tables.length > 3
                                         each table, index in tables 
-                                            if table != 'users' && table != 'api_keys'
+                                            if table != 'users' && table != 'api_keys' && table != 'projects'
                                                 table.table.__admin_table
                                                     thead 
                                                         tr 
                                                             th #{table.toUpperCase()}
-                                                                a(href="/admin/delete-category?table=" + table).__icon.__delete_icon
-                                                                    img(src="/images/icons/trash.png")
+                                                                button.__icon.__delete_icon(type="button" data-bs-toggle="modal" data-bs-target="#ModalDeleteFor"+table)
+                                                                    img(src="/images/icons/trash.png" height="20" width="20" style="display: inline;")
                                                     tbody 
                                                         tr  
                                                             td
                                                                 each cols, col_index in columns[index][0] 
                                                                         if col_index > 0
                                                                             p #{cols.name}
+                                                        div.modal(id="ModalDeleteFor"+table tabindex="-1")
+                                                            div.modal-dialog 
+                                                                div.modal-content 
+                                                                    div.modal-header 
+                                                                        h5.modal-title Delete #{table}?
+                                                                        button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close")
+                                                                    div.modal-body
+                                                                        p Are you sure you want to delete the category #{table}?
+                                                                        p.text-danger This will also delete all content in this category!
+                                                                        a.btn.btn-danger.__modal_delete_button(href="/admin/delete-category?table=" + table) Delete
+                                                                        button.btn.btn-success(type="button" data-bs-dismiss="modal") Cancel
                                                 hr
                                     else 
                                         h3.__categories_no_categories You don't have any categories set!
