--- a/www/routes/views/create_content.pug
+++ b/www/routes/views/create_content.pug
@@ -5,6 +5,8 @@ html
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js") 
         link(rel="stylesheet", href="/css/styles.css")
+        link(rel="stylesheet", href="/vendor/quill/quill.snow.css")
+        script(src="/vendor/quill/quill.js")
     
     body(style='background-image: url(' + background_image_url + ');')
         //- Navigation
@@ -57,4 +59,26 @@ html
 
             //- Content Container
             div.container.col-md-8.col-10.__main_content_container
-                p Create Content
+                h2.text-center.mt-5 Create Content 
+                h5.text-center You can create content for categories here
+
+                label.form-label What Category is this for?
+                select.form-select
+
+                //- div#editor
+                //- button#DeleteButton Delete 
+                //- button#LogInfo Log
+
+                
+    script.
+        const quill = new Quill('#editor', {
+            theme: 'snow'
+        })
+
+        document.querySelector('#DeleteButton').addEventListener('click', () => {
+            quill.deleteText(0, 1000000);
+        })
+
+        document.querySelector('#LogInfo').addEventListener('click', () => {
+            console.log(quill.getContents())
+        })
